update: update and delete shift
+ add update shift
+ add delete shift
+ some change in path and shift route
+ syntax fix
